...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.7"
                android:minHeight="0dp">

                <!--  Game button - green with round corners and black outline -->
                <Button
                    android:id="@+id/ui_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_random_game"
                    android:contentDescription="@string/new_random_game_a11y"
                    android:drawablePadding="12dp"
                    android:padding="10.8dp"
...
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Settings button - Gear icon -->
        <ImageButton
            android:id="@+id/settings_icon_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/settings_grid_scaled"
            android:contentDescription="@string/settings_a11y"
            android:background="@drawable/circular_button_gray"
            android:scaleType="centerInside"
...
